# AYAI

./: .env.example  .env2  .gitignore  BMAD.code-workspace  README.md  jest.config.cjs  jest.config.js  next.config.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
aggregation_scripts/: __init__.py  generate_suggestions.py  simulated_warehouse_query_result.json
aggregation_scripts/tests/: test_generate_suggestions.py
anonymization-service/: pyproject.toml
anonymization-service/docs/: anonymized_event_schema.json  raw_event_schema.json
anonymization-service/src/anonymization_service/: __init__.py  main.py
anonymization-service/src/anonymization_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
anonymization-service/src/anonymization_service/core/: __init__.py  anonymizer.py
anonymization-service/tests/core/: __init__.py  test_anonymizer.py
docs/: INSTA_FOLIO_DEVELOPER_GUIDE.md
e2e/: onboarding.spec.ts
extractor_service/: main.py  requirements.txt  test_upload.py
jules-scratch/verification/: verify_full_redesign.py
pathfinder-service/: pyproject.toml  suggestion_cache.json
pathfinder-service/src/pathfinder_service/: __init__.py  main.py
pathfinder-service/src/pathfinder_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pathfinder-service/tests/: test_main.py
prisma/: schema.prisma
src/: env.js
src/app/: Providers.tsx  SessionInfo.tsx  ThemeClientEffect.tsx  layout.tsx  page.tsx
src/components/: Footer.tsx  Header.tsx  footer.tsx  header.tsx  (+1 more)
(+62 files in other folders)
